--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,8 +1,8 @@
-.cardBorder {
+.card-border {
   border: 2px solid black;
 }
 
-.flexBox {
+.flex-box {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -10,6 +10,13 @@
   margin: 5px;
 }
 
-.maxWidth {
+.max-width {
   max-width: 300px;
+}
+
+.fancy-text {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-style: italic;
+  font-size: 30px;
+  text-decoration: underline;
 }
