--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
-.cardBorder {
+.card-border {
   border: 2px solid black;
 }
 
-.flexBox {
+.flex-box {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -10,11 +10,11 @@
   margin: 5px;
 }
 
-.maxWidth {
+.max-width {
   max-width: 300px;
 }
 
-.fancyText {
+.fancy-text {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-style: italic;
   font-size: 30px;
