--- a/src/app/products-id/products-id.component.html
+++ b/src/app/products-id/products-id.component.html
@@ -1,28 +1,46 @@
-<div *ngFor="let item of products$ | async; index as i">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#id</th>
-        <th scope="col">Title</th>
-        <th scope="col">Price</th>
-        <th scope="col">Description</th>
-        <th scope="col">Category</th>
-        <th scope="col">image</th>
-        <th scope="col">Rating</th>
-        <th scope="col">Count</th>
-      </tr>
-    </thead>
-    <tbody class="table-group-divider">
-      <tr>
-        <th scope="row">{{ this.item.id }}</th>
-        <td>{{ this.item.title }}</td>
-        <td>{{ this.item.price }}</td>
-        <td>{{ this.item.description }}</td>
-        <td>{{ this.item.category }}</td>
-        <td><img class="w-1/3 h-1/3" src="{{ this.item.image }}" alt="" /></td>
-        <td>{{ this.item.rating.rate }}</td>
-        <td>{{ this.item.rating.count }}</td>
-      </tr>
-    </tbody>
-  </table>
+<h1 class="flex justify-center fancyText">Fake API Store</h1>
+<br />
+<ul ngbNav #nav="ngbNav" class="nav-tabs">
+  <li ngbNavItem>
+    <a ngbNavLink class="link" routerLink="/products/:id">Products ID</a>
+  </li>
+  <li ngbNavItem>
+    <a ngbNavLink class="link" routerLink="/products">Products All</a>
+  </li>
+</ul>
+<br />
+<div class="flex justify-center">
+  <div *ngFor="let item of products$ | async">
+    <div class="max-width rounded overflow-hidden shadow-lg card-border">
+      <img
+        class="w-full"
+        src="{{ this.item.image }}"
+        alt="Here should be a photo"
+      />
+      <div class="px-6 py-4">
+        <div class="font-bold text-xl mb-2">{{ this.item.title }}</div>
+        <p class="text-gray-700 text-base">
+          {{ this.item.description }}
+        </p>
+        <br />
+        <h3 class="font-bold">Price {{ this.item.price }}$</h3>
+      </div>
+      <div class="px-6 pt-4 pb-2">
+        <span
+          class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+          >#{{ this.item.category }}</span
+        >
+        <span
+          class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+          >#rating {{ this.item.rating.rate }}</span
+        >
+        <span
+          class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2"
+          >#count {{ this.item.rating.count }}</span
+        >
+      </div>
+    </div>
+  </div>
 </div>
+
+<
